# VVMex

./: .gitattributes  .gitmodules  .zenodo.json  CITATION.cff  CMakeLists.txt  README.md  THIRDPARTY.md  mkdocs.yml  submit.py
docs/: 404.html  index.md  quick-start.md
docs/VVM_GPU_CPP/: index.html
docs/developer-guides/: architecture.md  index.md  p3-modifications.md  physics.md
docs/examples/: default-cases.md  gallery.md  idealized.md  index.md  taiwan-vvm.md
docs/javascripts/: video-gallery.js
docs/stylesheets/: video-gallery.css
docs/user-guides/: configuration.md  environment.md  index.md  io-management.md  job-submission.md
rundata/initial_conditions/profiles/default_cases/: RCEMIP_VVM_300k_init.txt  TNNUA.txt  mountain.txt  p3_bubble_shear.txt  profile_dry.txt  tpe_20120819_at004.txt  tpe_20240717i.txt
rundata/initial_conditions/spatial/default_cases/: evergreen.nc  grass.nc  init_regression_test.nc  mountain.nc  p3_bubble_shear.nc  rcemip.nc  sea_grass_mountain.nc  sea_urban_mountain.nc  taiwanvvm_2048.nc  urban.nc
rundata/input_configs/default_cases/: 2dbubble.json  README.md  advection_u.json  advection_v.json  advection_w.json  evergreen.json  grass.json  mountain.json  p3_bubble_shear.json  rcemip.json  sea_grass_mountain.json  sea_urban_mountain.json  stretching.json  taiwanvvm_2048.json  twisting.json  urban.json
src/core/: Initializer.cpp  Initializer.hpp  State.cpp  State.hpp
src/driver/: Model.cpp  Model.hpp
src/dynamics/: DynamicalCore.cpp  DynamicalCore.hpp
src/dynamics/forcings/: TracerSource.cpp  TracerSource.hpp
src/dynamics/numerical_methods/: NumericalMethod.cpp  NumericalMethod.hpp  NumericalMethodFactory.cpp  NumericalMethodFactory.hpp
src/dynamics/spatial_schemes/: MUSCL.cpp  MUSCL.hpp  SpatialScheme.hpp
src/dynamics/temporal_schemes/: SSPRK2.cpp  SSPRK2.hpp  TemporalScheme.hpp  TimeIntegrator.cpp  TimeIntegrator.hpp
src/dynamics/tendency_processes/: AdvectionTerm.cpp  AdvectionTerm.hpp  TendencyCalculator.cpp  TendencyCalculator.hpp  TendencyTerm.hpp
src/io/: Hdf5RestartReader.cpp  OutputManager.cpp  PnetcdfReader.cpp  PnetcdfReader.hpp
src/physics/p3/: VVM_p3_process_interface.cpp  VVM_p3_process_interface.hpp
src/physics/turbulence/: TurbulenceProcess.cpp
tests/: CMakeLists.txt
tests/baselines/: 2dbubble.h5
tests/configs/: 2dbubble.json  advection_u.json  advection_v.json  advection_w.json  stretching.json  twisting.json
tools/: generate_init_nc.py
